--- a/.github/workflows/update_universe.yml
+++ b/.github/workflows/update_universe.yml
@@ -1,22 +1,26 @@
-name: Update Universe Data (Test Branch)
+name: Update Universe Data
 
 on:
   push:
     branches:
+      - main
       - test
   schedule:
-    - cron: "0 3 * * *"
+    - cron: "0 3 * * *"  # Runs daily at 03:00 UTC
   workflow_dispatch:
 
 jobs:
   update-universe:
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: write  # Required for pushing changes
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          ref: test  # <-- YOUR TEST BRANCH NAME HERE
+          fetch-depth: 0  # Ensure history for backup moves
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -26,7 +30,7 @@ jobs:
       - name: Install dependencies
         run: pip install requests
 
-      - name: Fetch Universe Data
+      - name: Fetch and Update Universe Data
         run: python fetch_universe.py
 
       - name: Commit & Push if Changed
@@ -36,7 +40,9 @@ jobs:
             git config --global user.email "github-actions[bot]@users.noreply.github.com"
             git add universe_data.json universe_backups/
             git commit -F universe_update_summary.txt || echo "No changes to commit"
-            git push origin HEAD:test
+            git push
           else
             echo "No changes, skipping commit."
+          fi
+"
           fi
